--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.39.4",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
